# CTHINGS.CO-recruitment-tasks

task1/: .env_template  README.md  config.py  database.py  logs_tool.py  pyproject.toml  requirements.txt
task1/src/: database.py  logs_tool.py
task1/tests/: test_database.py  test_logs_tool.py
task2/: .env_template  README.md  api.py  config.py  database.py  docker-compose.yaml  main.py  requirements.txt  sqs.py
task2/.localstack/: init.sh
task2/app/: Dockerfile  api.py  config.py  database.py  main.py  requirements.txt
task2/app/tests/: test_api.py  test_database.py  test_sqs.py
